<resources>
    <string name="app_name">iSpace</string>
    <string name="one_player">Play</string>
    <string name="settings" >SETTINGS</string>
    <string name="setting_sound">Sound</string>
    <string name="setting_music">Music</string>
    <string name="ok">Ok</string>
    <string name="info">Swipe your finger to guide a spaceship in the galaxy to avoid asteroids and collect coins. \nTry to collect as many coins as possible. Get additional bombs and challenge your friends with your best high score!\n\nHave Fun !!!</string>
    <string name="game_over">Game Over</string>
    <string name="high_score">High Score</string>
    <string name="user_name">Name</string>
    <string name="score">Distance</string>
    <string name="text_user_score">Your distance is:</string>
    <string name="new_high_score">New High Score!!!</string>
    <string name="in_top_15">You are in the top 15</string>
    <string name="save">Save</string>
    <string name="free_style">FreeStyle</string>
    <string name="faster">Faster</string>
    <string name="getting_sick">Getting Sick</string>
    <string name="msg_yes">Yes</string>
    <string name="msg_no">No</string>
    <string name="space_shop">Space Shop</string>
    <string name="level">Level:</string>
    <string name="info_about_coins">Total coins:</string>
    <string name="are_you_sure_buy">Are you sure you want to buy this item?</string>
    <string name="are_you_sure_select">Are you sure you want to use this item?</string>
    <string name="comment">If you press \"yes\", you will start the game with this spaceship</string>
    <string name="you_already">You already buy this item</string>
    <string name="buy_now">Buy now!</string>
    <string name="swipe_more">Swipe to see more spaces</string>
    <string name="success_buying">Buying successfully</string>
    <string name="no_success">Something went wrong</string>
    <string name="success_adding">Adding successfully</string>
    <string name="success_update">Update succeeded</string>
    <string name="cant_buy">You don\'t have enough coins to buy this item</string>
    <string name="use_this_space">Use</string>
    <string name="text_send_whatsapp_1">My distance is </string>
    <string name="text_send_whatsapp_2">m in iSpace app. let\'s see if you can get a better score.</string>
    <string name="msg_error_save_score">You must type your name in order to save your record</string>
    <string name="cant_do_nothing">This is your current SpaceShip</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_content">Swipe left and right to move the spaceship.\npay attention, elements are falling on the screen. you should collect or avoid them.</string>
    <string name="elements">Elements:</string>
    <string name="inst_coin">Get 3/5/7 coins (FreeStyle/Faster/GettingSick) for each coin you collect.</string>
    <string name="inst_good_bomb">Remove a random element.</string>
    <string name="inst_ufo">Steal 3 coins from your collection. </string>
    <string name="inst_dead_asteroid">Lead to the ending the game.</string>
    <string name="inst_bad_bomb">Lead to the ending the game and cut 50% coins from what you collect.</string>
    <string name="good_luck">Good Luck :)</string>
    <string name="dont_remember">Don\'t show this message in the future</string>
    <string name="doubleClickExit">Please click BACK again to exit</string>
    <string name="msg_lose">Oops.. your distance is not enough to the top 15. Maybe next time :)</string>
    <string name="text_user_coin">Coins collected: </string>
</resources>