<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLayout"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/are_you_sure_buy"
            android:gravity="center"
            android:textColor="@color/blackColor"
            android:textSize="23sp"
            android:textStyle="bold"
            android:fontFamily="casual"
            />

        <TextView
            android:id="@+id/name_space_ship"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="name"
            android:gravity="center"
            android:textColor="@color/blackColor"
            android:textSize="23sp"
            android:textStyle="bold"
            android:fontFamily="casual"
            />

        <TextView
            android:id="@+id/price_of_space_ship"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="000"
            android:gravity="center"
            android:textColor="@color/blackColor"
            android:textSize="23sp"
            android:textStyle="bold"
            android:fontFamily="casual"
            />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLayout"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yes_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/msg_yes"
            android:background="@color/greenColor" />

        <Button
            android:id="@+id/no_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/msg_no"
            android:background="@color/redColor" />
    </LinearLayout>

    </LinearLayout>
</RelativeLayout>