<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_dialog_layout_design_user_input"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainMenuActivity"
    android:background="@drawable/background"
    android:padding="16dp">

    <TextView
        android:id="@+id/sms_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/settings"
        android:textColor="@color/whiteColor"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:textSize="32sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:id="@+id/animation_ufo_view"
        android:src="@drawable/frame_animation_ufo"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@drawable/layout_ripple"
        android:backgroundTint="@color/colorLayout"
        android:gravity="center"
        android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="casual"
            android:text="@string/setting_sound"
            android:textAlignment="textStart"
            android:textColor="@color/blackColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.suke.widget.SwitchButton
            android:id="@+id/setting_sfx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:checked="true"
            android:fontFamily="casual"
            android:splitTrack="false"
            android:switchMinWidth="50dp"
            android:switchPadding="10dp"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="casual"
            android:text="@string/setting_music"
            android:textAlignment="textStart"
            android:textColor="@color/blackColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.suke.widget.SwitchButton
            android:id="@+id/setting_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:checked="true"
            android:fontFamily="casual"
            android:showText="false"
            android:splitTrack="false"
            android:switchMinWidth="50dp"
            android:switchPadding="10dp"

            />
    </LinearLayout>
    </LinearLayout>

</LinearLayout>