<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainMenu"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ispace_logo"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/btn_freestyle"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:text="@string/free_style"
                android:textSize="15sp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/icon_sunny"
                android:textColor="@color/blackColor"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_faster"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="60dp"
                    android:text="@string/faster"
                    android:textSize="20sp"
                    android:fontFamily="casual"
                    android:textStyle="bold"
                    android:background="@drawable/icon_faster"
                    android:textColor="@color/blackColor"/>

                <Button
                    android:id="@+id/btn_getting_sick"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/getting_sick"
                    android:textSize="18sp"
                    android:fontFamily="casual"
                    android:textStyle="bold"
                    android:background="@drawable/icon_getting_sick"
                    android:textColor="@color/blackColor" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btn_settings"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/icon_settings" />

            <Button
                android:id="@+id/btn_score"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/icon_score" />


            <Button
                android:id="@+id/btn_shop"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/icon_shop"/>

            <Button
                android:id="@+id/btn_info"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/icon_info"
                android:onClick="InfoClick"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>