<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_dialog_layout_design_user_input"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HighScoreActivity"
    android:background="@color/blackColor"
    android:padding="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_sekelton"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_over"
                android:textColor="@color/whiteColor"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center"
                android:textSize="28sp"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_sekelton"/>

        </LinearLayout>

        <TextView
            android:id="@+id/text_user_score"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/text_user_high_score"
            android:textSize="20sp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="@color/whiteColor"/>

        <ImageView
            android:id="@+id/icon_animation_stars"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/frame_animation_stars"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/text_user_score"
            android:textSize="20sp"
            android:textColor="@color/specialColor"
            android:fontFamily="casual"
            android:layout_gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="25sp"
            android:textColor="@color/whiteColor"
            android:fontFamily="casual"
            android:layout_gravity="center"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/user_name"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/scope_text"
            android:textColor="@color/whiteColor"
            android:gravity="center"
            android:padding="5dp" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:background="@drawable/scope_button"
            android:text="@string/save"
            android:textColor="@color/whiteColor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_start_again"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/icon_repeat" />

        <Button
            android:id="@+id/btn_sharing_in_whatsaps"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/icon_share" />


        <Button
            android:id="@+id/btn_home"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/icon_home"/>
    </LinearLayout>

</LinearLayout>